--- a/package.json
+++ b/package.json
@@ -6,15 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev --name init",
-    "prisma:studio": "prisma studio"
+    "lint": "eslint"
   },
   "dependencies": {
     "@aptos-labs/ts-sdk": "^4.0.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.20.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
@@ -38,7 +33,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "prisma": "^5.20.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
