--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@metamask/jazzicon": "^2.0.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@types/jsonwebtoken": "^9.0.10",
     "blockies": "^0.0.2",
     "circomlib": "^2.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.4.0",
     "js-sha256": "^0.11.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.540.0",
     "next": "15.5.0",
     "next-auth": "^4.24.11",
@@ -29,7 +31,8 @@
     "react-dom": "19.1.0",
     "snarkjs": "^0.7.5",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -40,8 +43,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
-    "tsx": "^4.19.2",
     "tailwindcss": "^4",
+    "tsx": "^4.19.2",
     "typescript": "5.9.3"
   }
 }
