--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "19.1.0",
     "snarkjs": "^0.7.5",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
