feat: AI-uniface & update wallet adapter

--- a/Face/Code/requirements.txt
+++ b/Face/Code/requirements.txt
@@ -6,10 +6,7 @@ werkzeug==2.0.2
 flask==2.0.2
 flask-cors==6.0.1
 requests>=2.31.0
-deepface>=0.0.79
-tensorflow>=2.15.0
+uniface>=1.3.0
 rapidocr-onnxruntime>=1.3.0
 protobuf>=5.28.0
 onnxruntime>=1.16.0
-# RetinaFace dependencies (tự động cài khi dùng deepface với retinaface backend)
-# Không cần cài thêm, deepface sẽ tự động handle
